# jobs_scraper

./: .gitignore  README.md  ReedProcessor.py  analysis.ipynb  check_availability.py  civil_engineer_keywords.csv  dash_dashboard.ipynb  dash_dashboard.py  developer_keywords.csv  get_coordinates_nominatim.py  load_to_db.py  location.csv  locations_software_developer.csv  pyproject.toml  python_developer_keywords.csv  reed_analysis.ipynb  reed_scraper.py  requirements.txt  scraper.py  streamlit_dashboard.py
.github/workflows/: main.yml  main2.yml
etl/: developer_keywords.csv  load_to_db.py  reed_scraper.py
geocoding/: geocoding.py
